# wiki-repo-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  sync.yml
src/wiki_repo_bridge/: __init__.py  __main__.py  cli.py  images.py  page_names.py  pages.py  readme.py  schema.py  sync.py  validator.py  walker.py  wiki_client.py  wiki_parser.py  wikitext.py
tests/: conftest.py  test_cli.py  test_images.py  test_page_names.py  test_pages.py  test_readme.py  test_sync.py  test_validator.py  test_walker.py  test_wiki_client.py  test_wiki_parser.py  test_wikitext.py
tests/fixtures/: category_compact_form.wikitext  category_project.wikitext  property_has_website.wikitext
