[project]
name = "wiki-repo-bridge"
version = "0.1.0"
description = "Sync repository metadata (wiki.yml) to MediaWiki + SemanticSchemas wikis on tagged commits"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aharoni Lab" }]
dependencies = [
    "click>=8.1",
    "mwclient>=0.10",
    "mwparserfromhell>=0.6",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "responses>=0.25",
    "ruff>=0.4",
]

[project.scripts]
wiki-repo-bridge = "wiki_repo_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_repo_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
